--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jasmine-nahrain.github.io/",
+  "homepage": "https://jasmine-nahrain.github.io/jas/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
