--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "personal_website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jasmine-nahrain.github.io/jas/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -20,8 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
