--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
-[[redirects]]
-  from = "/*"
-  to = "/build/index.html"
-  status = 200
+# [[redirects]]
+#   from = "/*"
+#   to = "/about"
+#   status = 200
+
+[build]
+command = "CI= npm run build"
